[gd_scene load_steps=5 format=2]

[ext_resource path="res://emotions/BaseEmotion.gd" type="Script" id=1]
[ext_resource path="res://emotions/emote_anger.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Tween

func rage_around(player: Node2D):
	for i in range(10):
		var offset = Vector2(rand_range(-1.0, 1.0), rand_range(-1.0, 1.0)).normalized() * 512
		interpolate_method(player, \"move_and_slide\", Vector2.ZERO, offset, 0.3, Tween.TRANS_CUBIC, Tween.EASE_IN_OUT, i * 0.3)


func _on_Anger_emotion_triggered():
	rage_around($\"../..\")
	start()
	$\"../emote_anger\".show()
	for o in $\"../Area2D\".get_overlapping_bodies():
		o.queue_free()


func _on_Tween_tween_all_completed():
	$\"..\".emit_signal(\"emotion_resided\")
	$\"../emote_anger\".hide()
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[node name="Anger" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
script = SubResource( 1 )

[node name="emote_anger" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 32 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="emotion_triggered" from="." to="Tween" method="_on_Anger_emotion_triggered"]
[connection signal="tween_all_completed" from="Tween" to="Tween" method="_on_Tween_tween_all_completed"]
