[gd_scene load_steps=2 format=2]

[ext_resource path="res://emotions/BaseEmotion.gd" type="Script" id=1]

[node name="BaseEmotion" type="Node2D"]
script = ExtResource( 1 )
